--- a/app/routes.yml
+++ b/app/routes.yml
@@ -164,6 +164,13 @@ server:
   conditions:
     server:   "[A-Za-z0-9_-]+"
 
+servers:
+  method:     "GET"
+  route:      "/server"
+  stack:
+    - login.bouncer
+    - servers.page
+
 ########################################################################################################################
 # ADMIN REPO ROUTES
 ########################################################################################################################
