--- a/bower.json
+++ b/bower.json
@@ -13,8 +13,9 @@
     "tests"
   ],
   "devDependencies": {
-    "modernizr": "~2.6.3",
     "jquery": "~2.0.3",
-    "respond": "~1.3.0"
+    "crossroads": "~0.12.0",
+    "underscore": "~1.6.0",
+    "signals": "~1.0.0"
   }
 }
