--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "gulp-concat": "^2.2.0",
     "gulp-uglify": "^0.3.0",
     "gulp-if": "^1.2.0",
-    "gulp-plumber": "^0.6.1"
+    "gulp-plumber": "^0.6.1",
+    "requirejs": "^2.1.11",
+    "gulp-imagemin": "^0.5.0",
+    "gulp-clean": "^0.2.4"
   }
 }
